  workflows.
- Added the option `--oid-output` to output OIDs instead of accessions for
  the clustering workflows, reducing its memory use.
- Added support for using the `--multiprocessing` feature on Windows.
- Using `--multiprocessing` requires explicitly setting `--parallel-tmpdir`.
- Fixed a bug that could cause a crash when the `--target-indexed` option was
  used.
- As of now, a macOS binary is available as a GitHub release, supporting both
  x86 and Apple silicon CPUs. Using BLAST databases is also supported.

[2.1.12]
- Added support for the new NCBI taxonomic ranks "cellular root",
  "acellular root", "domain" and "realm".
- Added support for using BLAST databases to the Bioconda release.
- Fixed compiler errors for Clang 20.
- Enabled transitive closure computation in earlier clustering rounds and
  for bi-directional coverage clustering.
- Fixed an issue that could cause hits to be partially lost in frameshift
  alignment mode when they occured in both query strands for the same target.
- Fixed an error parsing FASTQ files when quality value lines started with
  the @ character.
- Fixed a compiler error on macOS.

[2.1.11]
- Improved the performance and sensitivity of the `cluster`, `deepclust` and
  `linclust` workflows.
- The `--faster` mode will by default use a minimizer sketch of fixed size
  per sequence instead of window-based minimizers.
- Added the option `--sketch-size` to enable seeding using a minimizer
  sketch of the given size per sequence.
- Cascaded clustering and iterated search will by default use the `--fast`
  mode with linearization in the second round.
- The `--round-coverage` parameter is now also applied to uni-directional
  coverage clustering.
- Cluster output files will correctly contain carriage returns on Windows.
- Fixed generation of the Docker container against the latest version of the
  NCBI toolkit.
- Fixed a bug that caused target coordinates not to be reported correctly