@@ -1,4 +1,4 @@
-cmake_minimum_required (VERSION 2.6)
+cmake_minimum_required (VERSION 2.6...3.5)
 project (DIAMOND)
 include(CheckCXXCompilerFlag)
 include(CheckSymbolExists)
@@ -11,6 +11,7 @@ option(X86 "X86" ON)
 option(ARM "ARM" OFF)
 option(AARCH64 "AARCH64" OFF)
 option(WITH_ZSTD "WITH_ZSTD" OFF)
+option(CROSS_COMPILE "CROSS_COMPILE" OFF)
 
 # experimental options not suitable for deployment purposes
 option(EXTRA "EXTRA" OFF)
@@ -31,17 +32,17 @@ set(MAX_SHAPE_LEN 19)
 set(BLAST_INCLUDE_DIR "" CACHE STRING "BLAST_INCLUDE_DIR")
 set(BLAST_LIBRARY_DIR "" CACHE STRING "BLAST_LIBRARY_DIR")
 
-if(CMAKE_SYSTEM_PROCESSOR MATCHES "^(aarch64.*|AARCH64.*|arm64.*)")
+if(NOT CROSS_COMPILE AND CMAKE_SYSTEM_PROCESSOR MATCHES "^(aarch64.*|AARCH64.*|arm64.*)")
   set(X86 OFF)
   set(AARCH64 ON)
-elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^(arm.*|ARM.*)")
+elseif(NOT CROSS_COMPILE AND CMAKE_SYSTEM_PROCESSOR MATCHES "^(arm.*|ARM.*)")
   set(X86 OFF)
   set(ARM ON)
-elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "PPC64*|ppc64*|powerpc64*")
+elseif(NOT CROSS_COMPILE AND CMAKE_SYSTEM_PROCESSOR MATCHES "PPC64*|ppc64*|powerpc64*")
   set(X86 OFF)
   # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -maltivec")
   add_definitions(-DEIGEN_DONT_VECTORIZE)
-elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^s390|sparc")
+elseif(NOT CROSS_COMPILE AND CMAKE_SYSTEM_PROCESSOR MATCHES "^s390|sparc")
   set(X86 OFF)
 endif()
 
